# fluentui_qt

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FluentUIDLL.cmake
examples/: CMakeLists.txt
examples/gallery/: Gallery.cpp  Gallery.h  main.cpp
examples/gallery/badge/: BadgeAppearance.h  BadgeColor.h  BadgeColorAppearance.h  BadgeDefault.h  BadgeIcon.h  BadgeSample.cpp  BadgeSample.h  BadgeShapes.h  BadgeSizes.h
examples/gallery/ui/: GalleryFrame.cpp  GalleryFrame.h  GalleryFrame.ui
src/: CMakeLists.txt
src/fluentui/: FluentuiDefs.h  fluentui_autoconf_config.h.cmake.in  fluentui_version.h.cmake.in
src/fluentui/components/: Badge.cpp  Badge.h  BadgeProps.h  SvgIcons.cpp  SvgIcons.h
src/fluentui/core/: IFluentPropsWidget.h  IProperties.h  Svg.cpp  Svg.h  colors.h
src/fluentui/resources/: assets.qrc  version.rc.cmake.in
src/fluentui/styles/: BadgeStyle.cpp  BadgeStyle.h  Dark.css  Light.css  Light.h  Style.h  TeamsDark.css  TeamsLight.css  Tokens.h
